# ChangeLog for www-client/chromium-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/chromium-bin/Attic/ChangeLog,v 1.43 2009/11/17 16:32:12 voyageur Exp $

*chromium-bin-4.0.251.0_p32167 (17 Nov 2009)

  17 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +chromium-bin-4.0.251.0_p32167.ebuild:
  Quick bump, 4.0.248.0 crashes for some people, bug #293338

  17 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  chromium-bin-4.0.240.0_p31382.ebuild,
  chromium-bin-4.0.248.0_p32003.ebuild, chromium-bin-9999.ebuild:
  Cleanups, suggestions by Andrey Vihrov <andrey.vihrov@gmail.com> in bug
  #293415

*chromium-bin-4.0.248.0_p32003 (15 Nov 2009)

  15 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.235.0_p30950.ebuild,
  +chromium-bin-4.0.248.0_p32003.ebuild:
  Version bump

  15 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  chromium-bin-9999.ebuild:
  QA: Drop keywords on live ebuilds.

*chromium-bin-4.0.240.0_p31382 (09 Nov 2009)

  09 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.224.2_p29794.ebuild,
  +chromium-bin-4.0.240.0_p31382.ebuild:
  Version bump, also add gnome-icon-theme to RDEPEND, thanks to Oleksandr
  Kovalenko <alx.kovalenko@gmail.com> in bug #292201

*chromium-bin-4.0.235.0_p30950 (05 Nov 2009)

  05 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.221.5_p27967.ebuild,
  -chromium-bin-4.0.222.4_p28661.ebuild,
  +chromium-bin-4.0.235.0_p30950.ebuild:
  Version bump

*chromium-bin-4.0.224.2_p29794 (22 Oct 2009)

  22 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +chromium-bin-4.0.224.2_p29794.ebuild:
  Bump, has initial fixes for audio stuttering with HTML5 audio/video

*chromium-bin-4.0.222.4_p28661 (11 Oct 2009)

  11 Oct 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -chromium-bin-4.0.219.4_p27359.ebuild,
  +chromium-bin-4.0.222.4_p28661.ebuild:
  Version bump
