@@ -7,7 +7,8 @@ DIST chromium-bin-x86-32003.zip 22844371 RMD160 61027d7c1aa4a2f4c5cbf085c2609b7b
 DIST chromium-bin-x86-32167.zip 22888588 RMD160 c13ea221edc77f2bd1690f6e96bb0b347277b942 SHA1 c6303b4a5eb575c10449b4da25e8875002020b36 SHA256 51770ced68e86673646463af2d6050018bb6596739fbde9059c9463bf8d48078
 EBUILD chromium-bin-4.0.240.0_p31382.ebuild 3223 RMD160 9da481796a5aa8fb6578bc71e4b5643c34119bc6 SHA1 0cdc0ebe0f74f192c33ddfb17aa873e09bd99863 SHA256 c44ddbf138da8609fea95c5cb4cb36661d7449bd9f552984ed693e5a09c52641
 EBUILD chromium-bin-4.0.248.0_p32003.ebuild 3223 RMD160 172b9e9bc851376fbc9bc6a2fcd91fa154532010 SHA1 89a63cc50bb1f4f951759f9adc50c4276797cf80 SHA256 034d017394f9dc322d7b7f0d5d65c7e3ad6ba383be1effeef7c7550030c2dffa
-EBUILD chromium-bin-4.0.251.0_p32167.ebuild 3223 RMD160 327c2c5bf0f647202cf30e80f059d988434a4218 SHA1 ba50650eccf1f162b78e6033ee8710a9a9afe5e6 SHA256 76a1fa5b24b811e9e5ce60183cf49199396e4b48c92c541d2f0bac2462a4c0e5
-EBUILD chromium-bin-9999.ebuild 3259 RMD160 1ca9eeffbbd019d176823b2f729ffcaad97c86e7 SHA1 ae29e62675feb6d76e3338e250f22ead1bd52b0e SHA256 4d818636f270854a3ed096df0ddaeceb0f238b94cadccee5355b979329d32ef9
-MISC ChangeLog 10259 RMD160 f2b17d8013e4bde03258c71ec8c7cfc0ce9819e3 SHA1 fb74d4b14cf603869d7c935b2ad68b66fd2bf647 SHA256 447b8fac26d374a382d6ea62cb18a29dec2dab89bf049c3b5555a806a1d80c51
+EBUILD chromium-bin-4.0.251.0_p32167.ebuild 3394 RMD160 28382791774dbd567e66768a0f17904b85d22cfb SHA1 9f28d723bb7bda94114e3f8014e6af6a5929172f SHA256 8c79f92f85adbbf7a9a76a31112c13ba0114d3d36ca2b4818f52ff55b86ac5d5
+EBUILD chromium-bin-9999.ebuild 3430 RMD160 f1f275db71c4ccb25ca4c67acefe4bb1d0652924 SHA1 03342805c58cf59ffade3781ff3bcdb6206082de SHA256 eb33d68ea407241b44d5e4da9ef97d57b2f52d59169ccecbacefafff567267b7
+MISC ChangeLog 10431 RMD160 b782456f5618ea24826fe6f775f9b7c744c062a2 SHA1 321f3d1137816f9f2d896208ff4e01426b168632 SHA256 fbf84c09f94dd69eb7f8c04ea1fe84a46c81ef05b6ab11ed8ab49570c74f77d1
+MISC chromium-bin-9999.ebuild.orig 3259 RMD160 1ca9eeffbbd019d176823b2f729ffcaad97c86e7 SHA1 ae29e62675feb6d76e3338e250f22ead1bd52b0e SHA256 4d818636f270854a3ed096df0ddaeceb0f238b94cadccee5355b979329d32ef9
 MISC metadata.xml 423 RMD160 72f9e5ed12d956dc13010060e44cc23e87da0e18 SHA1 eea81a8e1114e539b3a9863a5d6dc4c725f05f57 SHA256 8d2b773ffe4a7a44e49ad05c0c171b6a6ab23eb1aa7027ea7e1904e853be9cea
