@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/chromium-bin/Attic/chromium-bin-9999.ebuild,v 1.22 2009/11/17 14:27:25 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/chromium-bin/Attic/chromium-bin-9999.ebuild,v 1.23 2009/11/19 14:02:46 voyageur Exp $
 
 EAPI="2"
 inherit eutils multilib
@@ -53,6 +53,10 @@ src_install() {
 
 	dodir ${CHROMIUM_HOME}
 	cp -R chrome-linux/ "${D}"${CHROMIUM_HOME} || die "Unable to install chrome-linux folder"
+
+	# Man page (rename to prevent collision with chromium)
+	newman chrome-linux/chromium-browser.1 chromium-bin.1
+	rm "${D}"${CHROMIUM_HOME}/chrome-linux/chromium-browser.1
 
 	# Plugins symlink
 	dosym /usr/$(get_libdir)/nsbrowser/plugins ${CHROMIUM_HOME}/chrome-linux/plugins
